# crosscode-version-archive-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
data/: input_manifests.yaml  nwjs_versions.md  steam_manifests.md  versions_mapping.yaml
data/exported_manifests/1517030/1517030/: 1982871692047871356.txt  287923195000340934.txt  3654661421095839174.txt  4933454395804035619.txt  5230493890779345474.txt  5723703929571232824.txt  5757813532436449202.txt  5796466694515899986.txt  5892453454460761456.txt  6137849763617927144.txt  6927497262184325649.txt  7064859859225413716.txt  767003544700373734.txt  8541566411659806376.txt
data/exported_manifests/1517030/1517031/: 2872798440876990426.txt  2915074084415876025.txt  3509736069650661685.txt  3792854253697883635.txt  4007102089011978020.txt  4646931106848562396.txt  5362433569659906790.txt  5478477144785665206.txt  6488924921832983136.txt  6919378757309745541.txt  784846860709875197.txt  8173660306564450451.txt  8284901130846278835.txt  9086945283675070213.txt
data/exported_manifests/1585790/1585790/: 2038701864767100835.txt  2845237873865804524.txt  7036524543214634932.txt
data/exported_manifests/1585790/1585791/: 5822091486179298236.txt  7097500397346557662.txt  9154997127068398914.txt
data/exported_manifests/368340/1517030/: 3654661421095839174.txt  4342177751486568372.txt  5230493890779345474.txt  5723703929571232824.txt  5757813532436449202.txt  5796466694515899986.txt  6194753511006390430.txt  6927497262184325649.txt  767003544700373734.txt  8541566411659806376.txt
data/exported_manifests/368340/1517031/: 1497618732334206285.txt  2872798440876990426.txt  2915074084415876025.txt  3792854253697883635.txt  4646931106848562396.txt  5362433569659906790.txt  5478477144785665206.txt  638083738015388850.txt  8284901130846278835.txt  9086945283675070213.txt
data/exported_manifests/368340/1585790/: 2845237873865804524.txt
data/exported_manifests/368340/1585791/: 9154997127068398914.txt
data/exported_manifests/368340/368341/: 1015146057597586328.txt  1022416352418046671.txt  1026896651292495568.txt  1081521736469183484.txt  1174697808833305911.txt  1180010439994701570.txt  1182685610764480269.txt  1197255176405433489.txt  1435826916215193507.txt  1463964955390343667.txt  1510785137771297378.txt  1537822445814540420.txt  1554149031040626548.txt  1562495429972801823.txt  1567890996554724605.txt  1589835587123254783.txt  1612110665072245253.txt  1690724437533659685.txt  1801016406048448476.txt  1824892734581592850.txt  1832125840249329298.txt  1851897807983573902.txt  1995541947566920112.txt  2007190931433869969.txt  2046010926076335976.txt  2055162144920812162.txt  2091331756459634727.txt  2093985541945832996.txt  2192574251112456041.txt  2306314111431802376.txt  2434734875484047167.txt  2480963888358735827.txt  2579913519299069809.txt  2600855840923989138.txt  2616777892590897659.txt  2622308088036368303.txt  2743680833590606911.txt  2803263103605833707.txt  (+130 more)
extras/: process_versions_dumper.html  steamdb_extract_manifests_table.js
src/: catziptool.py  list_unmapped_manifests.py  make_wiki_tables.py  manifest_downloader.py
(+578 files in other folders)
