[tool.poetry]
name = "all-crosscode-versions-expansion"
version = "0.0.0"
description = ""
authors = []
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
steam = {extras = ["client"], version = "^1.2.0"}
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
